# aicms

./: .env.example  .gitignore  LICENSE  PLAN.md  README.md  ROADMAP.md  cli.sh  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yml  env.example  lefthook.yml  mcp-proxy-server.js  test_login.py
.githooks/: pre-commit
.planning/: PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md  STRATEGY.md
backend/: .env.example  Dockerfile  alembic.ini  pyproject.toml  start.sh
backend/alembic/: env.py
backend/alembic/versions/: 20260304_1357_77d1e7b8e390_initial_schema.py  20260305_0042_soft_delete.py  20260305_1200_draft_publish.py  20260305_1300_initial_schema.py  20260305_1800_add_user_plan.py  20260305_2030_add_theme_slug_draft.py  20260306_1800_add_stripe_fields.py  20260306_2000_add_email_verification.py  20260306_2000_email_verify.py  20260307_0000_add_media_files.py  20260307_0100_add_blog_posts.py  20260307_0200_add_form_submissions.py  20260307_0300_add_analytics.py  20260307_0400_add_share_previews.py  20260307_0500_add_page_scheduled_at.py  20260307_0600_add_pages_slug_unique.py  20260307_0700_add_user_name.py  20260307_0800_add_wordpress_sites.py
backend/seeds/: seed.py  seed_required.py
backend/src/: config.py  database.py  main.py
backend/src/api/: admin.py  analytics.py  auth.py  billing.py  blog.py  content.py  mcp.py  media.py  oauth.py  pages.py  preview.py  public.py  share.py  sites.py  submissions.py  themes.py  wordpress.py
backend/src/models/: __init__.py  analytics.py  blog.py  content.py  mcp_client.py  media.py  page.py  page_version.py  share_preview.py  site.py  submission.py  theme.py  user.py  wordpress_site.py
backend/src/schemas/: blog.py  content.py  media.py  page.py  site.py  theme.py  user.py  wordpress.py
backend/src/services/: auth.py  email.py  preview.py  storage.py  wordpress_client.py
backend/src/tests/: conftest.py  test_admin_ops.py  test_slug_uniqueness.py  test_wordpress_api.py
backend/src/tests/integration/: test_auth.py  test_isolation.py  test_themes.py
backend/src/tests/unit/: test_dummy.py
docs/: admin.md  ai-platforms.md  content-schema.md  deployment.md  development.md  mcp-integration.md  security.md  versioning.md
frontend/: .eslintrc.json  (+7 more)
mcp_server/: Dockerfile  README.md  pyproject.toml
mcp_server/src/: database.py  main.py  models.py  schemas.py
mcp_server/src/aicms_mcp_server/: __init__.py  server.py
(+124 files in other folders)
